# python-reversi

./: .bash_history  .gitignore  LICENSE  README.md  Reversi-Example.ipynb  pyproject.toml
docs/: getting-started.md  guide.md  index.md
docs/api/: board.md  constants.md  disc.md  move.md  outcome.md  svg.md
reversi/: __init__.py  core.py  svg.py
tests/: test_core.py
